fix: Backfill history for new tech & Fix Dark Mode Styles

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,7 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  background-color: #f9fafb;
-  color: #1f2937;
+@layer base {
+  body {
+    @apply antialiased text-neutral-800 bg-neutral-50 dark:bg-neutral-900 dark:text-neutral-100 transition-colors duration-200;
+  }
 }
